# Transcript-Analyzer-API

./: .gitignore  README.md  assesment_readme.md  project_tree.txt  pyproject.toml
app/: configurations.py  dependencies.py  main.py
app/api/: routes.py
app/domain/: models.py
app/repositories/: memory.py
app/schemas/: api.py
app/services/: analyzer.py
tests/adapters/: test_openai.py
